# ninja-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  db.py  models.py  schema.sql
app/assets/: basebots.json  preset.json  prompts.json
app/routes/: admin.py  auth.py  chat.py  robots.py  send_email.py  shopping.py  user.py
docs/: README.md  schema.sql  stream.md
